@@ -207,7 +207,7 @@ obligations (e.g. when defining mutually recursive blocks). The optional
 tactic is replaced by the default one if not specified.
 
 \begin{itemize}
-\item {\tt Obligations Tactic := \tacexpr}\comindex{Obligations Tactic}
+\item {\tt Obligation Tactic := \tacexpr}\comindex{Obligation Tactic}
   Sets the default obligation
   solving tactic applied to all obligations automatically, whether to
   solve them or when starting to prove one, e.g. using {\tt Next}.
